--- a/static/css/style.css
+++ b/static/css/style.css
@@ -32,3 +32,21 @@ a {
     margin: 0 auto;
     padding: 20px;
 }
+
+nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+  nav li {
+    display: inline-block;
+  }
+  nav a {
+    display: block;
+    padding: 10px 20px;
+    color: #333;
+    text-decoration: none;
+  }
+  nav a:hover {
+    background-color: #eee;
+  }
